discussion/kv_engine/150014/150014_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45144: Collection disk size use DocInfo::getTotalSize

For all items that contribute to disk size, use DocInfo::getTotalSize
which returns the key + value + meta sizes.

Change-Id: I0b8229252bcd2b2afb320261f5abdfd9fbb04027

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-03-30 16:40:24.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-30 18:28:23.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29733/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29733/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34652/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(210): error C2665: "std::from_chars": none of the 14 overloads could convert all the argument types ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34652/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8006/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10: error: "charconv" file not found [clang-diagnostic-error]
#include <charconv>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8006/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
error: "charconv" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8006/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9952/ : FAILURE

Compile error at [2021-03-30T17:47:19.454Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9952/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17500/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9591/ : FAILURE

Compile error at [2021-03-30T17:53:52.653Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9591/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9727/ : FAILURE

Compile error at [2021-03-30T18:02:55.871Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9727/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6550/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8656/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
